methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:14: error: not found: value BaisseBrosse
    BaisseBrosse()
    ^