methods.picture.PictureMono1.scala.code
override def run() {
  def faireV() {
    baisseBrosse()
    droite()
    leveBrosse()
    avance()
    gauche()
    baisseBrosse()
    avance()
    leveBrosse()
    gauche()
    avance()
    gauche()
    BaisseBrosse()
    avance()
    
    
  }
}